[gd_scene load_steps=6 format=3 uid="uid://dejk6fuga3ldo"]

[ext_resource type="Script" path="res://addons/card_engine/editor/ability_script_panel.gd" id="1_ttfmt"]
[ext_resource type="PackedScene" uid="uid://b88hs21jecmcs" path="res://addons/card_engine/editor/searchable_popup_menu.tscn" id="2_snfuk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4sytt"]
bg_color = Color(0.270588, 0.439216, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfp36"]
bg_color = Color(0.270588, 0.439216, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqake"]
bg_color = Color(0.145098, 0.156863, 0.176471, 1)

[node name="AbilityScriptPanel" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_ttfmt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4sytt")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TypeLabel" type="Label" parent="HBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MinimizeButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Collapse properties"
text = "â‡±"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Script:"

[node name="ScriptPathEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
editable = false
selecting_enabled = false

[node name="ScriptPathPopupMenu" parent="HBoxContainer/ScriptPathEdit" instance=ExtResource("2_snfuk")]
unique_name_in_owner = true

[node name="ChooseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Find script"
text = "â€¦"

[node name="ClearButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove script"
disabled = true
text = "â¨‰"

[node name="NewButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create script"
text = "ï¼‹"

[node name="EditButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Edit script"
disabled = true
text = "ðŸ“œ"

[node name="PropertiesContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pfp36")

[node name="MarginContainer" type="MarginContainer" parent="PropertiesContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="PropertiesContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vqake")

[node name="PropertiesInnerContainer" type="MarginContainer" parent="PropertiesContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="Properties" type="GridContainer" parent="PropertiesContainer/MarginContainer/PanelContainer/PropertiesInnerContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="MinimizeHint" type="MarginContainer" parent="PropertiesContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PropertiesContainer/MarginContainer/PanelContainer/MinimizeHint"]
layout_mode = 2
text = "(...)"

[connection signal="pressed" from="HBoxContainer/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="gui_input" from="HBoxContainer/ScriptPathEdit" to="." method="_on_script_path_edit_gui_input"]
[connection signal="close_requested" from="HBoxContainer/ScriptPathEdit/ScriptPathPopupMenu" to="." method="_on_script_path_popup_menu_close_requested"]
[connection signal="search_changed" from="HBoxContainer/ScriptPathEdit/ScriptPathPopupMenu" to="." method="_on_line_edit_text_changed"]
[connection signal="search_submitted" from="HBoxContainer/ScriptPathEdit/ScriptPathPopupMenu" to="." method="_on_line_edit_text_submitted"]
[connection signal="selected_id" from="HBoxContainer/ScriptPathEdit/ScriptPathPopupMenu" to="." method="_on_script_path_popup_menu_id_pressed"]
[connection signal="pressed" from="HBoxContainer/ChooseButton" to="." method="_on_choose_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
